--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start5('1.5.2.epk');">Vanilla</button>
 				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start5('nebula.epk');">Nebula</button>
 				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start5('ricefault.epk');">Ricefault</button>
+				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start5('bedlessfault.epk');">Bedlessfault</button>
 			</div>
 		</div>
 	</body>
