--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 				document.getElementById("version").hidden = true;
 			}
 
+			function start3() {
+				document.getElementById("prelaunch")?.remove();
+				script("1.3.js").addEventListener('load', function() {
+					window.minecraftOpts = ["game_frame","1.3.epk"];
+					main();
+				});
+			}
+
 			// start minecraft 1.5.2
 			function start5(pack) {
 				document.getElementById("prelaunch")?.remove();
@@ -67,6 +75,7 @@
 		<div style="margin:0px;width:100%;height:100%;font-family:sans-serif;display:flex;align-items:center;user-select:none;" id="prelaunch">
 			<div style="margin:auto;text-align:center;" id="version">
 				<h1>Viaclient</h1>
+				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start3();">Launch 1.3</button>
 				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="pack();">Launch 1.5.2</button>
 				<button style="padding: 12px 28px; font-size: 20px; background-color: white; color: black; border: 2px solid #555555; border-radius: 12px;" onclick="start8();">Launch 1.8.8</button>
 			</div>
